# Flatercula

./: Dockerfile  README.md  install.sh  pyproject.toml  requirements.txt
flatercula2/: Flatercula_pull_tool.py  aiui_agent.py  aiui_cli.py  aiui_gui.py  flatercula2.sh  flatercula2_cli.sh  install2.sh
